avoid line break in path string

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -7,3 +7,7 @@
     padding-left: 10px;
     padding-right: 10px;
 }
+
+.nobr {
+    white-space: nowrap;
+}
